fix: removed pre code double border

--- a/src/assets/properties-panel.css
+++ b/src/assets/properties-panel.css
@@ -1182,6 +1182,10 @@ textarea.bio-properties-panel-input {
   border-radius: 3px;
 }
 
+.bio-properties-panel-tooltip-content pre code {
+  border: none;
+}
+
 .bio-properties-panel-tooltip p:first-child {
   margin-top: 0;
 }
